Fixing errors with header overlap over the content.

--- a/less/main/theme.less
+++ b/less/main/theme.less
@@ -4,15 +4,23 @@
 // This contains all styles that are not
 // widgets.
 //
+// #Page
 // #Header
 // #Site Styles
 // #Header
-// #Page Styles
 // #Content
 // #Footer
 // #Widget Overlay
 //
 // ----------------------------------------
+
+// ------------------------------
+// #Page
+// ------------------------------
+
+.page {
+	padding-bottom: 2em;
+}
 
 // ------------------------------
 // #Header
@@ -98,34 +106,21 @@ article, aside, dialog, figcaption, figure, footer, header, hgroup, main, nav, s
 }
 
 // ------------------------------
-// #Page Styles
-// ------------------------------
-
-.page {
-	padding-bottom: 15em;
-}
-
-// ------------------------------
 // #Content
 // ------------------------------
 
 // Main
-
 .template__content {
-	padding-top: @font__companyname--font-size * (@font__companyname--line-height*0.1)*2 + @font__navigation--font-size * (@font__navigation--line-height*0.1)*2;
-	
-	@media @tablet {
-		padding-top: @font__companyname--font-size * (@font__companyname--line-height*0.1)*3;
-	}
+	padding-top: 2em;
 	
 	.page--home & {
 		padding-top: 0 !important;
 	}
 }
 
-// Container
-
-.container { }
+.header-feature ~ .template__content {
+    margin-top: 0 !important;
+}
 
 // ------------------------------
 // #Footer
