--- a/less/widgets/feature.less
+++ b/less/widgets/feature.less
@@ -18,11 +18,14 @@
 // ------------------------------
 
 .header-feature {
-	margin-bottom: 2em;
 	overflow: hidden;
 	
     .widget[data-widget-type="feature"] {
 		padding: 0;
+		
+		.widget-overlay .list--options {
+		    top: 50%;
+		}
     }
 }
 
