--- a/less/widgets/navigation.less
+++ b/less/widgets/navigation.less
@@ -361,7 +361,7 @@
 
 .navigation-item {
 	position: relative;
-	margin-bottom: 0;
+	margin-bottom: 0 !important;
 	padding: 0;
 	line-height: 1em;
 	
